--- a/gaphor/diagram/styleeditor.ui
+++ b/gaphor/diagram/styleeditor.ui
@@ -12,16 +12,22 @@
     </child>
     <child>
       <object class="GtkBox">
-        <property name="orientation">vertical</property>
+        <property name="orientation">horizontal</property>
         <child>
           <object class="GtkLabel">
-            <property name="margin-start">6</property>
-            <property name="margin-end">6</property>
-            <property name="margin-top">6</property>
-            <property name="margin-bottom">6</property>
-            <property name="label" translatable="yes">Feijoada sem feijão, não é feijoada, e tu és, o meu feijão.</property>
-            <property name="wrap">1</property>
-            <property name="xalign">0</property>
+            <property name="margin-top">20</property>
+            <property name="label" translatable="yes">Select a Color:</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkColorButton" id="color-button">
+            <property name="title" translatable="yes">Select a Color</property>
+            <property name="width-request">50</property>
+            <property name="height-request">50</property>
+            <property name="margin-start">20</property>
+            <property name="margin-end">20</property>
+            <property name="margin-top">20</property>
+            <property name="margin-bottom">20</property>
           </object>
         </child>
       </object>
