feat(color_picker): Add a button to export style editor to style sheet

--- a/gaphor/diagram/styleeditor.ui
+++ b/gaphor/diagram/styleeditor.ui
@@ -99,7 +99,12 @@
           </object>
         </child>
 
-
+        <child>
+          <object class="GtkButton" id="export">
+            <property name="label" translatable="yes">Export to Style Sheet</property>
+            <property name="halign">end</property>
+          </object>
+        </child>
 
       </object>
     </child>
